# FlashDiffusion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashdiffusion_controlnet.yaml  flashdiffusion_lora_training.yaml  flashdiffusion_sd15_txt2img.yaml  flashdiffusion_sdxl_txt2img.yaml
docker/: Dockerfile  docker-compose.yml
docs/: FAQ.md  Home.md  Installation.md  LoRA-Fine-Tuning.md  Models.md  Quick-Start.md  Schedulers.md  Training.md
examples/: benchmark_model.py  image_to_image.py  inpainting.py  text_to_image.py  train_lora.py
flashdiffusion/: __init__.py  cli.py  registry.py
flashdiffusion/adapters/: __init__.py  instant_id.py  ip_adapter.py
flashdiffusion/analytics/: __init__.py  benchmark.py  plots.py  profiler.py
flashdiffusion/cfg/: __init__.py  config.py
flashdiffusion/engine/: __init__.py  callbacks.py  exporter.py  predictor.py  trainer.py  validator.py
flashdiffusion/losses/: __init__.py  diffusion_loss.py  perceptual_loss.py
flashdiffusion/models/: __init__.py  flash_diffusion.py  lora.py  sd3.py
flashdiffusion/models/controlnet/: __init__.py  controlnet.py
flashdiffusion/models/sdxl/: __init__.py  dual_text_encoder.py  sdxl_pipeline.py  sdxl_unet.py
flashdiffusion/models/text_encoder/: __init__.py  clip_encoder.py
flashdiffusion/models/unet/: __init__.py  unet_2d.py
flashdiffusion/models/vae/: __init__.py  autoencoder.py
flashdiffusion/nn/: __init__.py
flashdiffusion/pipelines/: __init__.py  controlnet_pipe.py  img2img.py  inpainting.py  instruct_pix2pix.py  txt2img.py
flashdiffusion/schedulers/: __init__.py  base.py  ddim.py  ddpm.py  dpm_plus.py  euler.py  lcm.py
flashdiffusion/solutions/: __init__.py  image_generator.py  style_transfer.py  upscaler.py
flashdiffusion/upscaling/: __init__.py  esrgan.py
flashdiffusion/utils/: __init__.py  checkpoint.py  image_utils.py  logger.py  metrics.py
flashdiffusion/video/: __init__.py  animatediff.py  svd.py
tests/: test_comprehensive.py  test_models.py  test_new_components.py  test_registry.py  test_schedulers.py
