[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashdiffusion"
version = "1.0.0"
description = "FlashDiffusion: Lightweight diffusion model framework — text-to-image, img2img, inpainting, ControlNet, LoRA training for Stable Diffusion, SDXL, and FLUX"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FlashVision"},
]
keywords = ["diffusion", "stable-diffusion", "sdxl", "flux", "text-to-image", "image-generation", "lora", "dreambooth", "controlnet", "inpainting", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "diffusers>=0.25.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
analytics = ["matplotlib>=3.7.0", "pandas>=2.0.0"]
export = ["onnx>=1.14.0", "onnxruntime>=1.15.0"]
quality = ["clean-fid>=0.1.35", "clip-score>=0.1.0"]
controlnet = ["controlnet-aux>=0.0.7"]
all = ["matplotlib>=3.7.0", "pandas>=2.0.0", "onnx>=1.14.0", "onnxruntime>=1.15.0", "clean-fid>=0.1.35", "controlnet-aux>=0.0.7"]
dev = ["pytest", "ruff", "pre-commit"]

[project.urls]
Homepage = "https://github.com/FlashVision/FlashDiffusion"
Repository = "https://github.com/FlashVision/FlashDiffusion"
Issues = "https://github.com/FlashVision/FlashDiffusion/issues"

[project.scripts]
flashdiffusion = "flashdiffusion.cli:main"

[tool.setuptools.packages.find]
include = ["flashdiffusion*"]

[tool.ruff]
line-length = 120
